# watermark_remover

./: AUTHORS  CMakeLists.txt  INSTALL  LICENSE  README  README.md  watermark_remover.cpp
